@@ -91,6 +91,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26569: Fix :func:`pyclbr.readmodule` and :func:`pyclbr.readmodule_ex`
+  to support importing packages.
+
 - Issue #26499: Account for remaining Content-Length in
   HTTPResponse.readline() and read1().  Based on patch by Silent Ghost.
   Also document that HTTPResponse now supports these methods.
